--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -5,7 +5,10 @@
     "types": [
       "jasmine",
       "node"
-    ]
+    ],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
   },
   "files": [
     "test.ts",
